# ROS-AI-Integration-Foundational-Structure-

./: LICENSE  README.md
New structure/config/: global_config.yaml
New structure/data/augmentation/: sample_augmented.txt
New structure/data/processed/: sample_processed.txt
New structure/data/raw/: sample.txt
New structure/docs/: ProjectStructure.md  README.md  architecture.md  usage.md
New structure/experiments/logs/: logs.txt
New structure/experiments/notebooks/: sample_notebook.ipynb
New structure/experiments/reports/: report.md
New structure/scripts/: deploy_ros.sh  run_distillation.sh  run_llm_training.sh
New structure/src/data/: augment.py  download.py  preprocess.py
New structure/src/distillation/: config.yaml  distill.py  loss_functions.py
New structure/src/evaluation/: evaluate.py
New structure/src/evaluation/benchmarks/: benchmark_example.py
New structure/src/llm_training/: config.yaml  model.py  train.py  utils.py
New structure/src/ros_integration/integration_tests/: test_integration.py
New structure/src/ros_integration/roslib_package/: package.xml  setup.py
New structure/src/ros_integration/roslib_package/config/: config.yaml
New structure/src/ros_integration/roslib_package/launch/: launch_file.launch.py
New structure/src/ros_integration/roslib_package/src/: ros_utils.py  slm_node.py
New structure/src/utils/: helper.py
New structure/tests/test_data/: test_preprocess.py
New structure/tests/test_models/: test_model.py
New structure/tests/test_ros_integration/: test_ros_node.py
